--- a/Agap2IT Academy SuperMarket ConsoleApp/Agap2IT.Academy.SuperMarket.Business/Agap2IT.Academy.SuperMarket.Business.csproj
+++ b/Agap2IT Academy SuperMarket ConsoleApp/Agap2IT.Academy.SuperMarket.Business/Agap2IT.Academy.SuperMarket.Business.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
+    <ProjectReference Include="..\Agap2IT.Academy.SuperMarket.Dal\Agap2IT.Academy.SuperMarket.Dal.csproj" />
+    <ProjectReference Include="..\Agap2IT.Academy.SuperMarket.Data\Agap2IT.Academy.SuperMarket.Data.csproj" />
   </ItemGroup>
 
 </Project>
