--- a/Agap2IT Academy SuperMarket ConsoleApp/Agap2IT.Academy.SuperMarket.ConsoleApp/Agap2IT.Academy.SuperMarket.ConsoleApp.csproj
+++ b/Agap2IT Academy SuperMarket ConsoleApp/Agap2IT.Academy.SuperMarket.ConsoleApp/Agap2IT.Academy.SuperMarket.ConsoleApp.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Agap2IT.Academy.SuperMarket.Business\Agap2IT.Academy.SuperMarket.Business.csproj" />
     <ProjectReference Include="..\Agap2IT.Academy.SuperMarket.Dal\Agap2IT.Academy.SuperMarket.Dal.csproj" />
     <ProjectReference Include="..\Agap2IT.Academy.SuperMarket.Data\Agap2IT.Academy.SuperMarket.Data.csproj" />
   </ItemGroup>
